--- a/MobileFinanceErp/Views/Shared/_Layout.cshtml
+++ b/MobileFinanceErp/Views/Shared/_Layout.cshtml
@@ -125,7 +125,7 @@
 
                     }
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" href="@Url.Action("Index","Model")">
                             <i class="nav-icon icon-bubble"></i> Models
                         </a>
                     </li>
