--- a/MobileFinanceErp/Views/Customer/Edit.cshtml
+++ b/MobileFinanceErp/Views/Customer/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model MobileFinanceErp.ViewModel.AddEditCustomerViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     ViewBag.PageName = "Customer";
-    ViewBag.ActionName = "Create";
+    ViewBag.ActionName = "Edit";
 }
 <script src="~/Scripts/pages/customer.addedit.js"></script>
 
