--- a/MobileFinanceErp/Views/Shared/_Layout.cshtml
+++ b/MobileFinanceErp/Views/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
                             <i class="nav-icon icon-user"></i> Customer
                         </a>
                     </li>
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a class="nav-link" href="index.html">
                             <i class="nav-icon icon-user-follow"></i> Reference
                         </a>
@@ -143,7 +143,7 @@
                         <a class="nav-link" href="index.html">
                             <i class="nav-icon icon-chart"></i> Finance
                         </a>
-                    </li>
+                    </li>*@
 
                 </ul>
             </nav>
