--- a/MobileFinanceErp/Views/Shared/_Layout.cshtml
+++ b/MobileFinanceErp/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Finance ERP</title>
+    <title>Raj Mobile</title>
     <!-- Icons-->
     <link rel="icon" type="image/ico" href="~/favicon.ico" sizes="any" />
     <link href="~/Content/coreui/icons/css/coreui-icons.min.css" rel="stylesheet" />
@@ -134,12 +134,12 @@
                             <i class="nav-icon icon-user"></i> Customer
                         </a>
                     </li>
-                    @*<li class="nav-item">
-                        <a class="nav-link" href="index.html">
-                            <i class="nav-icon icon-user-follow"></i> Reference
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index","Guarantor")">
+                            <i class="nav-icon icon-user-follow"></i> Guarantor
                         </a>
                     </li>
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a class="nav-link" href="index.html">
                             <i class="nav-icon icon-chart"></i> Finance
                         </a>
