--- a/MobileFinanceErp/Views/Shared/_Layout.cshtml
+++ b/MobileFinanceErp/Views/Shared/_Layout.cshtml
@@ -134,16 +134,17 @@
                             <i class="nav-icon icon-user"></i> Customer
                         </a>
                     </li>
-                    @*<li class="nav-item">
-                        <a class="nav-link" href="index.html">
-                            <i class="nav-icon icon-user-follow"></i> Reference
-                        </a>
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" href="@Url.Action("Index","Finance")">
                             <i class="nav-icon icon-chart"></i> Finance
                         </a>
-                    </li>*@
+                    </li>
+                    @*<li class="nav-item">
+            <a class="nav-link" href="index.html">
+                <i class="nav-icon icon-user-follow"></i> Reference
+            </a>
+        </li>
+                    *@
 
                 </ul>
             </nav>
