--- a/MobileFinanceErp/Views/Shared/_Layout.cshtml
+++ b/MobileFinanceErp/Views/Shared/_Layout.cshtml
@@ -123,33 +123,27 @@
                             </a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index","Model")">
+                                <i class="nav-icon icon-bubble"></i> Models
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index","Customer")">
+                                <i class="nav-icon icon-user"></i> Customer
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index","Finance")">
+                                <i class="nav-icon icon-chart"></i> Finance
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index","Guarantor")">
+                                <i class="nav-icon icon-chart"></i> Guarantor
+                            </a>
+                        </li>
                     }
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index","Model")">
-                            <i class="nav-icon icon-bubble"></i> Models
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index","Customer")">
-                            <i class="nav-icon icon-user"></i> Customer
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index","Finance")">
-                            <i class="nav-icon icon-chart"></i> Finance
-                        </a>
-                    </li>
-                    @*<li class="nav-item">
-            <a class="nav-link" href="index.html">
-                <i class="nav-icon icon-user-follow"></i> Reference
-            </a>
-        </li>
-                    *@
-                        <a class="nav-link" href="index.html">
-                            <i class="nav-icon icon-chart"></i> Finance
-                        </a>
-                    </li>*@
-
                 </ul>
             </nav>
             <button class="sidebar-minimizer brand-minimizer" type="button"></button>
