--- a/MobileFinanceErp/Content/style.css
+++ b/MobileFinanceErp/Content/style.css
@@ -17519,3 +17519,12 @@ body {
 .required-label {
     color: red;
 }
+
+td.details-control {
+    background: url('../Content/datatable/images/grid-collapse.png') no-repeat center center;
+    cursor: pointer;
+}
+
+tr.shown td.details-control {
+    background: url('../Content/datatable/images/grid-expand.png') no-repeat center center;
+}
