--- a/MobileFinanceErp/Views/Finance/Index.cshtml
+++ b/MobileFinanceErp/Views/Finance/Index.cshtml
@@ -3,6 +3,96 @@
     ViewBag.PageName = "Finance";
 }
 
+<script>
+    function generateActionLink(data) {
+        // Get the external template definition using a jQuery selector.
+        var template = kendo.template($("#javascriptTemplate").html());
+        var result = template(data); //Execute the template
+        return result
+    }
+
+    function receiveFinance(financeId) {
+        openModal("Receive Loan", '@Url.Action("ReceivePayment","Finance")', { financeId: financeId })
+    }
+
+    function financeDetailTemplate() {
+        var tr = $(this).closest('tr');
+        var table = $("#grdFinance").DataTable();
+        var row = table.row(tr);
+
+        if (row.child.isShown()) {
+            // This row is already open - close it
+            row.child.hide();
+            tr.removeClass('shown');
+        }
+        else {
+            // Open this row
+            var dataToPlot = row.data();
+            if (tr.data("loaded") != true) {
+                postAjaxData('@Url.Action("FinanceDetails","Finance")', { financeId: dataToPlot.Id }, function (response) {
+                    // Get the external template definition using a jQuery selector.
+                    var template = kendo.template($("#financeDetailTemplate").html());
+
+                    // Create some dummy data.
+                    var templateData = { Id: dataToPlot.Id, data: response };
+
+                    row.child(template(templateData));
+                    //row.child('<span>Test</span>');
+                }, function () { }, false)
+            }
+            row.child.show();
+            tr.addClass('shown');
+            tr.data("loaded", true)
+        }
+    }
+
+    function receivePaymentSaveSuccess(data) {
+        if (data.Status == true) {
+            showSuccess('Payment received successfully');
+            closeModal();
+            var table = $("#grdFinance").DataTable();
+            table.ajax.reload();
+            return;
+        }
+        showError('Failed to receive payment. Please try again');
+    }
+
+    function receivePaymentSaveError() {
+        showError('Failed to receive payment. Please try again');
+    }
+</script>
+
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+@Scripts.Render("~/bundles/jqueryval")
+
+
+<script type="text/x-kendo-template" id="financeDetailTemplate">
+    <table id="financeDetail_#:Id#" class="table table-striped table-bordered no-footer">
+        <thead>
+            <tr>
+                <th>Received Date</th>
+                <th>Received Amount</th>
+            </tr>
+        </thead>
+        <tbody>
+            #if(data.length == 0){#
+            <tr><td colspan="2">Payment not yet received</td></tr>
+            #} else { #
+            # for (var i = 0; i < data.length; i++) { #
+            <tr>
+                <td>
+                    #: convertToDateTime(data[i].ReceivedDate) #
+                </td>
+                <td>
+                    #: data[i].EMIAmount#
+                </td>
+            </tr>
+            # } #
+            # } #
+        </tbody>
+    </table>
+</script>
+
 <div id="ui-view">
     <div>
         <div class="animated fadeIn">
@@ -18,25 +108,23 @@
                 </div>
                 <div class="card-body">
                     @(Html.DataTable<FinanceListViewModel>()
-                                    .Name("grdFinance")
-                                    .Read(Url.Action("GetFinances", "Finance"))
-                                    .CssClass("table table-striped table-bordered no-footer")
-                                    .Searchable(true)
-                                    .PageLength(10)
-                                    .Columns(column =>
-                                    {
-                                        column.Bound(s => s.Id).Searchable(false);
-                                        column.Bound(s => s.CustomerName);
-                                        column.Bound(s => s.BookNo);
-                                        column.Bound(s => s.PageNo);
-                                        column.Bound(s => s.MobilePrice).Searchable(false);
-                                        column.Bound(s => s.LoanAmount).Searchable(false);
-                                        column.Bound(s => s.DownPayment).Searchable(false);
-                                        column.Bound(s => s.StartDate).Searchable(false);
-                                        column.Bound(s => s.EndDate).Searchable(false);
-                                        //column.Template().Title("Actions").RenderCallback("generateActionLink");
-                                    })
-                                    .Render()
+                                                    .Name("grdFinance")
+                                                    .Read(Url.Action("GetFinances", "Finance"))
+                                                    .CssClass("table table-striped table-bordered no-footer")
+                                                    .Searchable(true)
+                                                    .PageLength(10)
+                                                    .Columns(column =>
+                                                    {
+                                                        column.Bound(s => s.CustomerName);
+                                                        column.Bound(s => s.BookNoPageNumber);
+                                                        column.Bound(s => s.MobilePrice).Searchable(false);
+                                                        column.Bound(s => s.LoanAmount).Searchable(false);
+                                                        column.Bound(s => s.DownPayment).Searchable(false);
+                                                        column.Bound(s => s.StartDate).RenderCallback("convertToDateTime").Searchable(false);
+                                                        column.Template().Title("Actions").RenderCallback("generateActionLink");
+                                                    })
+                                                    .DetailTemplate("financeDetailTemplate")
+                                                    .Render()
                     )
                 </div>
             </div>
@@ -44,37 +132,12 @@
     </div>
 </div>
 
+
+
+
 <script id="javascriptTemplate" type="text/x-kendo-template">
-    <a href="@Url.Action("Edit", "Finance")/#: Id #" class="text-info">
-        <i class="fa fa-pencil"></i>
-    </a>
-    <button class="btn btn-link text-danger" onclick="deleteFinance(#:Id#)">
-        <i class="fa fa-remove"></i>
+    <button class="btn btn-link text-info" title="Recieve Payment" onclick="receiveFinance(#:Id#)">
+        <i class="fa fa-money"></i>
     </button>
 </script>
 
-<script>
-    function generateActionLink(data) {
-        // Get the external template definition using a jQuery selector.
-        var template = kendo.template($("#javascriptTemplate").html());
-        var result = template(data); //Execute the template
-        return result
-    }
-
-    function deleteFinance(financeId) {
-        confirmDialog("Are you sure you want to delete this finance?", function () {
-            // Delete logic
-            postAjaxData('@Url.Action("Delete","Finance")', { id: financeId }, function (data) {
-                if (data.Status == true) {
-                    showSuccess(data.Message);
-                    var financeTable = $("#grdFinance").DataTable()
-                    financeTable.ajax.reload();
-                } else {
-                    showError(data.Message);
-                }
-            }, function () { })
-        }, function () {
-
-        });
-    }
-</script>
