--- a/MobileFinanceErp/Views/Shared/_Layout.cshtml
+++ b/MobileFinanceErp/Views/Shared/_Layout.cshtml
@@ -63,10 +63,10 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <ol class="breadcrumb">
-                <li class="breadcrumb-item">Home</li>
-                <li class="breadcrumb-item active">@ViewBag.PageName</li>
-                <!-- Breadcrumb Menu-->
-                @*<li class="breadcrumb-menu d-md-down-none">
+            <li class="breadcrumb-item">Home</li>
+            <li class="breadcrumb-item active">@ViewBag.PageName</li>
+            <!-- Breadcrumb Menu-->
+            @*<li class="breadcrumb-menu d-md-down-none">
                     <div class="btn-group" role="group" aria-label="Button group">
                         <a class="btn" href="#">
                             <i class="icon-speech"></i>
@@ -79,7 +79,7 @@
                         </a>
                     </div>
                 </li>*@
-            </ol>
+        </ol>
         <ul class="nav navbar-nav ml-auto">
             <li class="nav-item d-md-down-none">
                 <a class="nav-link" href="#">
@@ -150,7 +150,7 @@
         </div>
         <main class="main">
             <!-- Breadcrumb-->
-            
+
             <div class="container-fluid">
                 @RenderBody()
             </div>
@@ -171,6 +171,25 @@
     @RenderSection("scripts", false)
 
     <span id="popupNotification"></span>
+
+    <!-- /.modal-->
+    <div class="modal fade" id="globalModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="modalLabel">Modal title</h4>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                </div>
+            </div>
+            <!-- /.modal-content-->
+        </div>
+        <!-- /.modal-dialog-->
+    </div>
+    <!-- /.modal-->
 
     <script>
         var mainMessage = '@(TempData["PageLevelMessage"] == null ? "" : TempData["PageLevelMessage"])';
