--- a/MobileFinanceErp/Views/Shared/_Layout.cshtml
+++ b/MobileFinanceErp/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Raj Mobile</title>
+    <title>Mobile ERP</title>
     <!-- Icons-->
     <link rel="icon" type="image/ico" href="~/favicon.ico" sizes="any" />
     <link href="~/Content/coreui/icons/css/coreui-icons.min.css" rel="stylesheet" />
@@ -55,7 +55,7 @@
         </button>
         <a class="navbar-brand" href="#">
 
-            Raj Mobile
+            Mobile ERP
             @*<img class="navbar-brand-full" src="img/brand/logo.svg" width="89" height="25" alt="CoreUI Logo">
                 <img class="navbar-brand-minimized" src="img/brand/sygnet.svg" width="30" height="30" alt="CoreUI Logo">*@
         </a>
@@ -140,7 +140,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="@Url.Action("Index","Guarantor")">
-                                <i class="nav-icon icon-chart"></i> Guarantor
+                                <i class="nav-icon icon-user"></i> Guarantor
                             </a>
                         </li>
                     }
@@ -159,12 +159,12 @@
     </div>
     <footer class="app-footer">
         <div>
-            <a href="#">Raj Mobile</a>
-            <span>&copy; 2018.</span>
+            <a href="#">Mobile ERP</a>
+            <span>&copy;<script>document.write(new Date().getFullYear())</script></span>
         </div>
         <div class="ml-auto">
             <span>Powered by</span>
-            <a href="#">Raj Mobile</a>
+            <a href="#"></a>
         </div>
     </footer>
 
