--- a/MobileFinanceErp/Views/Home/Index.cshtml
+++ b/MobileFinanceErp/Views/Home/Index.cshtml
@@ -8,16 +8,16 @@
             <div class="card text-white bg-primary">
                 <div class="card-body pb-0">
                     @*<div class="btn-group float-right">
-                            <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="icon-settings"></i>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </div>*@
-                    <div class="text-value">12</div>
+                        <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="icon-settings"></i>
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </div>*@
+                    <div class="text-value">@ViewBag.CustomerCount</div>
                     <div>Customers</div>
                 </div>
                 <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
@@ -27,35 +27,10 @@
         </div>
         <!-- /.col-->
         <div class="col-sm-6 col-lg-3">
-            <div class="card text-white bg-info">
+            <div class="card text-white bg-danger">
                 <div class="card-body pb-0">
-                    <button class="btn btn-transparent p-0 float-right" type="button">
-                        <i class="icon-location-pin"></i>
-                    </button>
-                    <div class="text-value">20</div>
-                    <div>Brands</div>
-                </div>
-                <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
-                    <canvas class="chart" id="card-chart2" height="70"></canvas>
-                </div>
-            </div>
-        </div>
-        <!-- /.col-->
-        <div class="col-sm-6 col-lg-3">
-            <div class="card text-white bg-warning">
-                <div class="card-body pb-0">
-                    @*<div class="btn-group float-right">
-                            <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="icon-settings"></i>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </div>*@
-                    <div class="text-value">Rs. 12,000</div>
-                    <div>Pending Amount</div>
+                    <div class="text-value">@ViewBag.PendingAmount</div>
+                    <div>Pending Loan Amount</div>
                 </div>
                 <div class="chart-wrapper mt-3" style="height:70px;">
                     <canvas class="chart" id="card-chart3" height="70"></canvas>
@@ -64,20 +39,23 @@
         </div>
         <!-- /.col-->
         <div class="col-sm-6 col-lg-3">
-            <div class="card text-white bg-danger">
+            <div class="card text-white bg-green">
                 <div class="card-body pb-0">
-                    @*<div class="btn-group float-right">
-                            <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="icon-settings"></i>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </div>*@
-                    <div class="text-value">Rs. 23,000</div>
-                    <div>Collection Loan</div>
+                    <div class="text-value">@ViewBag.CollectedAmount</div>
+                    <div>Collected Loan Amount</div>
+                </div>
+                <div class="chart-wrapper mt-3" style="height:70px;">
+                    <canvas class="chart" id="card-chart3" height="70"></canvas>
+                </div>
+            </div>
+        </div>
+        <!-- /.col-->
+        <div class="col-sm-6 col-lg-3">
+            @*<div class="card text-white bg-warning">*@
+            <div class="card text-white bg-warning">
+                <div class="card-body pb-0">
+                    <div class="text-value">@ViewBag.TotalAmount</div>
+                    <div>Total Loan Amount</div>
                 </div>
                 <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
                     <canvas class="chart" id="card-chart4" height="70"></canvas>
@@ -87,7 +65,7 @@
         <!-- /.col-->
     </div>
     <div class="row">
-        <div class="col-sm-12 col-lg-6">
+        <div class="col-sm-12 col-lg-12">
             <div class="card">
                 <div class="card-header">
                     Payment : Pending vs Received
@@ -99,7 +77,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-lg-6">
+        @*<div class="col-sm-12 col-lg-6">
             <div class="card">
                 <div class="card-header">
                     Customer Reviews
@@ -110,7 +88,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
 
