Image Upload Functionality

--- a/MobileFinanceErp/Views/Customer/_CreateEditPartial.cshtml
+++ b/MobileFinanceErp/Views/Customer/_CreateEditPartial.cshtml
@@ -113,6 +113,11 @@
                                 @Html.ValidationMessageFor(w => w.Mobile2)
                             </div>
                         </div>
+                        <div class="col-sm-12 col-md-4 col-lg-12">
+                            <div class="form-group">
+                                @Html.Partial("_PictureUpload", Model)
+                            </div>
+                        </div>
                     </div>
                 </div>
 
