--- a/MobileFinanceErp/Views/Customer/_CreateEditPartial.cshtml
+++ b/MobileFinanceErp/Views/Customer/_CreateEditPartial.cshtml
@@ -24,11 +24,24 @@
                 <div class="card-header"><strong>Manage</strong> Customer</div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-sm-12 col-md-4 col-lg-4">
+                        <div class="col-sm-12 col-md-4 col-lg-12">
+                            <div class="form-group">
+                                @Html.Partial("_PictureUpload", Model)
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-6">
                             <div class="form-group">
                                 @Html.RequiredLabelFor(w => w.CustomerIdentificationNumber)
-                                @Html.TextBoxFor(w => w.CustomerIdentificationNumber, new { @class = "form-control" })
+                                @Html.TextBoxFor(w => w.CustomerIdentificationNumber, new { @readonly = true, @class = "form-control" })
                                 @Html.ValidationMessageFor(w => w.CustomerIdentificationNumber)
+                            </div>
+                        </div>
+
+                        <div class="col-sm-12 col-md-6 col-lg-6">
+                            <div class="form-group">
+                                @Html.RequiredLabelFor(w => w.AdhaarNumber)
+                                @Html.TextBoxFor(w => w.AdhaarNumber, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(w => w.AdhaarNumber)
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-4 col-lg-4">
@@ -52,18 +65,11 @@
                                 @Html.ValidationMessageFor(w => w.Surname)
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-4 col-lg-4">
-                            <div class="form-group">
-                                @Html.RequiredLabelFor(w => w.AdhaarNumber)
-                                @Html.TextBoxFor(w => w.AdhaarNumber, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(w => w.AdhaarNumber)
-                            </div>
-                        </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-6">
                             <div class="form-group">
                                 @Html.LabelFor(w => w.Address1)
-                                @Html.TextAreaFor(w => w.Address1, 3, 3, new { @class = "form-control" })
+                                @Html.TextBoxFor(w => w.Address1, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(w => w.Address1)
                             </div>
                         </div>
@@ -71,7 +77,7 @@
                         <div class="col-sm-12 col-md-6 col-lg-6">
                             <div class="form-group">
                                 @Html.LabelFor(w => w.Address2)
-                                @Html.TextAreaFor(w => w.Address1, 3, 3, new { @class = "form-control" })
+                                @Html.TextBoxFor(w => w.Address1, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(w => w.Address1)
                             </div>
                         </div>
@@ -79,26 +85,31 @@
                         <div class="col-sm-12 col-md-6 col-lg-6">
                             <div class="form-group">
                                 @Html.LabelFor(w => w.Address3)
-                                @Html.TextAreaFor(w => w.Address3, 3, 3, new { @class = "form-control" })
+                                @Html.TextBoxFor(w => w.Address3, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(w => w.Address3)
                             </div>
                         </div>
 
                         <div class="col-sm-12 col-md-4 col-lg-6">
                             <div class="form-group">
-                                @Html.LabelFor(w => w.City)
-                                @Html.TextBoxFor(w => w.City, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(w => w.City)
+                                @Html.LabelFor(w => w.CityId)
+                                @(Html.KendoDropdownFor(w => w.CityId, new { @class = "form-control", @style = "width:100%" })
+                                                                                .DataTextField("Name")
+                                                                                .DataValueField("Id")
+                                                                                .Read(Url.Action("GetAll", "GroupCode", new { codeName = "City" }))
+                                                                                .OptionLabel("Select City..")
+                                                                                .Render())
+                                @Html.ValidationMessageFor(w => w.CityId)
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-4 col-lg-6">
+                        <div class="col-sm-12 col-md-4 col-lg-4">
                             <div class="form-group">
                                 @Html.LabelFor(w => w.Pincode)
                                 @Html.TextBoxFor(w => w.Pincode, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(w => w.Pincode)
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-4 col-lg-6">
+                        <div class="col-sm-12 col-md-4 col-lg-4">
                             <div class="form-group">
                                 @Html.LabelFor(w => w.Mobile1)
                                 @Html.TextBoxFor(w => w.Mobile1, new { @class = "form-control" })
@@ -106,18 +117,14 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-12 col-md-4 col-lg-6">
+                        <div class="col-sm-12 col-md-4 col-lg-4">
                             <div class="form-group">
                                 @Html.LabelFor(w => w.Mobile2)
                                 @Html.TextBoxFor(w => w.Mobile2, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(w => w.Mobile2)
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-4 col-lg-12">
-                            <div class="form-group">
-                                @Html.Partial("_PictureUpload", Model)
-                            </div>
-                        </div>
+
                     </div>
                 </div>
 
