--- a/MobileFinanceErp/Views/Home/Index.cshtml
+++ b/MobileFinanceErp/Views/Home/Index.cshtml
@@ -8,15 +8,15 @@
             <div class="card text-white bg-primary">
                 <div class="card-body pb-0">
                     @*<div class="btn-group float-right">
-                        <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="icon-settings"></i>
-                        </button>
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </div>*@
+                            <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="icon-settings"></i>
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-right">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </div>*@
                     <div class="text-value">@ViewBag.CustomerCount</div>
                     <div>Customers</div>
                 </div>
@@ -29,7 +29,7 @@
         <div class="col-sm-6 col-lg-3">
             <div class="card text-white bg-danger">
                 <div class="card-body pb-0">
-                    <div class="text-value">@ViewBag.PendingAmount</div>
+                    <div class="text-value">₹ @ViewBag.PendingAmount</div>
                     <div>Pending Loan Amount</div>
                 </div>
                 <div class="chart-wrapper mt-3" style="height:70px;">
@@ -41,7 +41,7 @@
         <div class="col-sm-6 col-lg-3">
             <div class="card text-white bg-green">
                 <div class="card-body pb-0">
-                    <div class="text-value">@ViewBag.CollectedAmount</div>
+                    <div class="text-value">₹ @ViewBag.CollectedAmount</div>
                     <div>Collected Loan Amount</div>
                 </div>
                 <div class="chart-wrapper mt-3" style="height:70px;">
@@ -54,7 +54,7 @@
             @*<div class="card text-white bg-warning">*@
             <div class="card text-white bg-warning">
                 <div class="card-body pb-0">
-                    <div class="text-value">@ViewBag.TotalAmount</div>
+                    <div class="text-value">₹ @ViewBag.TotalAmount</div>
                     <div>Total Loan Amount</div>
                 </div>
                 <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
@@ -78,20 +78,35 @@
             </div>
         </div>
         @*<div class="col-sm-12 col-lg-6">
-            <div class="card">
-                <div class="card-header">
-                    Customer Reviews
-                </div>
-                <div class="card-body">
-                    <div class="chart-wrapper">
-                        <canvas id="canvas-3"></canvas>
+                <div class="card">
+                    <div class="card-header">
+                        Customer Reviews
+                    </div>
+                    <div class="card-body">
+                        <div class="chart-wrapper">
+                            <canvas id="canvas-3"></canvas>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>*@
+            </div>*@
     </div>
 </div>
 
 @section scripts{
-<script src="~/Scripts/charts.js"></script>
+    <script>
+        var pieChart = new Chart($('#canvas-5'), {
+            type: 'pie',
+            data: {
+                labels: ['Received', 'Pending'],
+                datasets: [{
+                    data: [@ViewBag.CollectedAmount, @ViewBag.PendingAmount],
+                    backgroundColor: ['#00ff00', '#B22222'],
+                    hoverBackgroundColor: ['#00ff00', '#B22222']
+                }]
+            },
+            options: {
+                responsive: true
+            }
+        });
+    </script>
 }
