--- a/MobileFinanceErp/Views/Finance/Index.cshtml
+++ b/MobileFinanceErp/Views/Finance/Index.cshtml
@@ -117,10 +117,9 @@
                                                     {
                                                         column.Bound(s => s.CustomerName);
                                                         column.Bound(s => s.BookNoPageNumber);
-                                                        column.Bound(s => s.MobilePrice).Searchable(false);
+                                                        column.Bound(s => s.CustomerMobileNumber);
+                                                        column.Bound(s => s.GuarantorName);
                                                         column.Bound(s => s.LoanAmount).Searchable(false);
-                                                        column.Bound(s => s.DownPayment).Searchable(false);
-                                                        column.Bound(s => s.StartDate).RenderCallback("convertToDateTime").Searchable(false);
                                                         column.Template().Title("Actions").RenderCallback("generateActionLink");
                                                     })
                                                     .DetailTemplate("financeDetailTemplate")
