--- a/MobileFinanceErp/Views/Shared/Error.cshtml
+++ b/MobileFinanceErp/Views/Shared/Error.cshtml
@@ -2,8 +2,28 @@
 
 @{
     ViewBag.Title = "Error";
+    ViewBag.PageName = "Error";
 }
-
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-6 col-sm-4 col-md mb-3 mb-xl-0 text-center">
+            <div class="clearfix">
+                <h4 class="pt-3">Oops! something went wrong!!!</h4>
+                <p class="text-muted">An error occurred while processing your request.</p>
+                <p class="text-muted">Our staff has been notified and have started looking into it.</p>
+            </div>
+            <div class="col-6 col-sm-4 col-md mb-3 mb-xl-0 text-center">
+                <a href="@Url.Action("Index","Home")" class="btn btn-sm btn-primary " type="button" name="GoToHome">
+                    <i class="icon-screen-desktop ">
+                    </i>
+                    Dashboard
+                </a>
+                <button class="btn btn-sm btn-warning" type="button" name="GoPrevious" onclick="window.history.go(-1)">
+                    <i class="icon-arrow-left-circle">
+                    </i>
+                Previous Page
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
